fix(formula): clear formats do not remove formula, help panel title wrap

--- a/packages/sheets-formula/src/views/prompt/help-function/index.module.less
+++ b/packages/sheets-formula/src/views/prompt/help-function/index.module.less
@@ -29,7 +29,8 @@
         font-size: var(--font-size-xs);
         font-weight: 500;
         color: rgb(var(--text-color));
-
+        overflow-wrap: anywhere;
+        
         border-bottom: 1px solid rgb(var(--border-color));
 
         &-icons {
